--- a/markup/components/aside/aside.html
+++ b/markup/components/aside/aside.html
@@ -9,7 +9,7 @@
 
 <ul class="aside__list">
 	{{#each aside.item}}
-		<li class="aside__item {{#if active}}is-active{{/if}}">
+		<li class="aside__item "> <!-- can have class is-active -->
 			<a href="#" class="aside__link">{{{item}}}</a>
 		</li>
 	{{/each}}
