--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="layout">
-		<a href="/page-list.html" class="logo">Discount cigarettes</a>
+		<a href="page-list.html" class="logo">Discount cigarettes</a>
 		<a href="#" class="trigger">
 			<span></span>
 		</a>
