--- a/markup/components/hero/hero.sass
+++ b/markup/components/hero/hero.sass
@@ -9,7 +9,12 @@
 		+coverdiv
 		background-size: cover
 		background-attachment: fixed
-		background-position: 50% 50%
+		background-position: 20% 50%
+		&:after
+			content: ''
+			+coverdiv
+			background-color: rgba(37, 27, 99, 0.4)
+			pointer-events: none
 	&__text
 		max-width: 100%
 	&__content
@@ -73,11 +78,11 @@
 			transition-duration: 0.3s
 			transition-timing-function: ease-out
 		&:hover
-			color: $red
-			text-shadow: 1px 2px 1px $black
+			color: #212c90
+			// text-shadow: 1px 2px 1px $black
 			svg
-				fill: $red
-				filter: drop-shadow(1px 2px 1px $black)
+				fill: #212c90
+				// filter: drop-shadow(1px 2px 1px $black)
 			&:before
 				transform: scaleY(1)
 		svg
