--- a/markup/static/scss/common.sass
+++ b/markup/static/scss/common.sass
@@ -183,8 +183,10 @@ p
 		background-color: $dark
 	&__col
 		max-width: 240px
-		padding: 4px 0px 4px 20px
+		padding: 8px 0px 8px 20px
 		color: $white
+		&:last-child
+			padding-right: 20px
 	&__price
 		font-size: 27px
 		+rbl
