--- a/markup/static/scss/fonts.sass
+++ b/markup/static/scss/fonts.sass
@@ -12,6 +12,7 @@ $red-dark: #e31d59
 +font('Roboto-Medium', 'Roboto-Medium')
 +font('Roboto-Regular', 'Roboto-Regular')
 +font('Roboto-Thin', 'Roboto-Thin')
++font('sport-world', 'sport-world')
 
 =rt
 	font-family: 'Roboto-Thin', Arial, sans-serif
@@ -25,6 +26,8 @@ $red-dark: #e31d59
 	font-family: 'Roboto-Bold', Arial, sans-serif
 =rbl
 	font-family: 'Roboto-Black', Arial, sans-serif
+=sp
+	font-family: 'sport-world', Arial, sans-serif
 
 
 .title
@@ -33,6 +36,7 @@ $red-dark: #e31d59
 		color: $white
 		line-height: 1
 		margin-bottom: 10px
+		+sp
 		+r(850)
 			font-size: 60px
 		+r(650)
