--- a/markup/components/footer/footer.sass
+++ b/markup/components/footer/footer.sass
@@ -46,13 +46,17 @@
 			justify-content: center
 	.mod-order
 		&-0
-			order: -4
+			+r(1025)
+				order: -4
 		&-1
-			order: -3
+			+r(1025)
+				order: -3
 		&-2
-			order: -2
+			+r(1025)
+				order: -2
 		&-3
-			order: -1
+			+r(1025)
+				order: -1
 	.socio
 		+r(400)
 			margin-right: auto
