--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -1339,7 +1339,7 @@ p {
   width: 100%;
   color: #fff;
   margin-bottom: .4em;
-  font-size: 12px;
+  font-size: 14px;
   font-family: 'Roboto-Regular', Arial, sans-serif;
 }
 
@@ -2010,28 +2010,36 @@ p {
   }
 }
 
-.footer .mod-order-0 {
-  -webkit-box-ordinal-group: -3;
-      -ms-flex-order: -4;
-          order: -4;
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-0 {
+    -webkit-box-ordinal-group: -3;
+        -ms-flex-order: -4;
+            order: -4;
+  }
 }
 
-.footer .mod-order-1 {
-  -webkit-box-ordinal-group: -2;
-      -ms-flex-order: -3;
-          order: -3;
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-1 {
+    -webkit-box-ordinal-group: -2;
+        -ms-flex-order: -3;
+            order: -3;
+  }
 }
 
-.footer .mod-order-2 {
-  -webkit-box-ordinal-group: -1;
-      -ms-flex-order: -2;
-          order: -2;
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-2 {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
 }
 
-.footer .mod-order-3 {
-  -webkit-box-ordinal-group: 0;
-      -ms-flex-order: -1;
-          order: -1;
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-3 {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -2696,7 +2704,7 @@ p {
   height: 100%;
   background-size: cover;
   background-attachment: fixed;
-  background-position: 20% 50%;
+  background-position: 0% 50%;
 }
 
 .hero__bg:after {
