--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -1028,31 +1028,89 @@ p {
   }
 }
 
-.basket__table {
+.basket__wrap {
+  display: table;
   width: 100%;
-  min-width: 660px;
   border-spacing: 0 4px;
   padding-bottom: 35px;
 }
 
-.basket__table .count {
+@media only screen and (max-width: 1300px) {
+  .basket__wrap {
+    display: block;
+  }
+}
+
+.basket__wrap .count {
   width: 52px;
 }
 
-.basket__table th.basket__col {
+@media only screen and (max-width: 1300px) {
+  .basket__wrap .count {
+    margin-top: auto;
+  }
+}
+
+.basket__wrap th.basket__col {
   background-color: #333;
   text-align: left;
 }
 
 .basket__row {
+  display: table-row;
   width: 100%;
   background-color: #404040;
 }
 
+@media only screen and (max-width: 1300px) {
+  .basket__row {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 100%;
+    margin-bottom: 2px;
+  }
+}
+
+.basket__header {
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__header {
+    display: none;
+  }
+}
+
 .basket__col {
+  display: table-cell;
+  vertical-align: top;
   max-width: 240px;
   padding: 8px 0px 8px 20px;
   color: #fff;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__col {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .basket__col {
+    padding-left: 14px;
+  }
 }
 
 .basket__col:last-child {
@@ -1060,8 +1118,42 @@ p {
 }
 
 .basket__price {
+  word-wrap: nowrap;
   font-size: 27px;
   font-family: 'Roboto-Black', Arial, sans-serif;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__price {
+    width: 40%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .basket__price {
+    font-size: 24px;
+    width: auto;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .basket__price {
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .basket__close {
+    right: 0;
+  }
 }
 
 .basket__title {
@@ -1072,14 +1164,82 @@ p {
   font-family: 'Roboto-Black', Arial, sans-serif;
 }
 
+@media only screen and (max-width: 1300px) {
+  .basket__title {
+    padding-right: 40px;
+  }
+}
+
+.basket__box {
+  display: block;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__box {
+    margin-left: auto;
+  }
+}
+
+.basket__box_item {
+  display: block;
+  white-space: nowrap;
+}
+
+.basket__box .desc__kr {
+  font-size: 14px;
+  margin-bottom: 10px;
+  display: none;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__box .desc__kr {
+    display: block;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    max-width: 100%;
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
+
 .basket__footer {
   -webkit-transform: translateY(20px);
           transform: translateY(20px);
   background-color: transparent;
 }
 
-.basket__footer .btn__bdr {
+@media only screen and (max-width: 1300px) {
+  .basket__footer {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
+
+.basket__footer .basket__col {
   font-family: 'Roboto-Black', Arial, sans-serif;
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__footer .basket__col {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .basket__footer .basket__col_end {
+    display: inline-block;
+    min-width: 20px;
+    width: 20px;
+    padding: 0;
+  }
 }
 
 .bside {
@@ -1087,7 +1247,13 @@ p {
 }
 
 .bside.top-offset {
-  margin-top: 80px;
+  margin-top: 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .bside.top-offset {
+    margin-top: 80px;
+  }
 }
 
 .cside {
@@ -1099,8 +1265,10 @@ p {
   margin-bottom: 1em;
 }
 
-.cside.top-offset {
-  margin-top: 70px;
+@media only screen and (max-width: 1025px) {
+  .cside.top-offset {
+    margin-top: 70px;
+  }
 }
 
 .rside {
@@ -1278,7 +1446,7 @@ p {
 
 .checkout__footer .btn {
   width: 100%;
-  max-width: 130px;
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -1666,55 +1834,6 @@ p {
   text-align: center;
 }
 
-.article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-bottom: 60px;
-}
-
-.article__item {
-  width: 24%;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-color: #404040;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-@media only screen and (max-width: 1025px) {
-  .article__item {
-    width: 32%;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .article__item {
-    width: 48%;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .article__item {
-    width: 100%;
-  }
-}
-
-.article__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  margin-top: 20px;
-}
-
 .aside {
   display: inline-block;
   vertical-align: top;
@@ -1789,20 +1908,7 @@ p {
 }
 
 .aside__item:hover a {
-  font-size: 40px;
   color: #ff0046;
-}
-
-@media only screen and (max-width: 1430px) {
-  .aside__item:hover a {
-    font-size: 3.2vw;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .aside__item:hover a {
-    font-size: 22px;
-  }
 }
 
 .aside__item.is-active a {
@@ -1913,186 +2019,53 @@ p {
   }
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #404040;
-  padding: 50px 0;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer {
-    position: relative;
-  }
-}
-
-.footer__column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer__column {
-    margin-bottom: 30px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-.footer__list {
-  list-style: none;
-  padding: 0;
-  margin: 0 40px 0 0;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer__list {
-    width: 22%;
-    margin: 0px;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .footer__list {
-    width: 48%;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .footer__list {
-    width: 100%;
-  }
-}
-
-.footer__item {
-  margin-bottom: 18px;
-}
-
-.footer__link {
-  color: #fff;
-  font-size: 13px;
-  text-transform: uppercase;
-  font-family: 'Roboto-Bold', Arial, sans-serif;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.footer__link:hover {
-  color: #ff0046;
-}
-
-.footer__item {
-  color: #fff;
-}
-
-.footer .layout {
+.article {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 60px;
+}
+
+.article__item {
+  width: 24%;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #404040;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 @media only screen and (max-width: 1025px) {
-  .footer .layout {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  .article__item {
+    width: 32%;
   }
 }
 
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-0 {
-    -webkit-box-ordinal-group: -3;
-        -ms-flex-order: -4;
-            order: -4;
+@media only screen and (max-width: 850px) {
+  .article__item {
+    width: 48%;
   }
 }
 
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-1 {
-    -webkit-box-ordinal-group: -2;
-        -ms-flex-order: -3;
-            order: -3;
+@media only screen and (max-width: 500px) {
+  .article__item {
+    width: 100%;
   }
 }
 
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-2 {
-    -webkit-box-ordinal-group: -1;
-        -ms-flex-order: -2;
-            order: -2;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-3 {
-    -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .footer .socio {
-    margin-right: auto;
-  }
-}
-
-.socio {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.socio__item {
-  margin-bottom: 10px;
-}
-
-.socio__item:hover .socio__link {
-  color: #ff0046;
-}
-
-.socio__item:hover svg {
-  fill: #e31d59;
-}
-
-.socio__item svg {
-  fill: #fff;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.socio__link {
+.article__footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #fff;
-  font-size: 14px;
-  font-family: Arial, sans-serif;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.socio__icon {
-  display: inline-block;
-  vertical-align: top;
-  width: 30px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 20px;
 }
 
 .brand {
@@ -2208,6 +2181,12 @@ p {
   padding-bottom: 100%;
   margin-bottom: 20px;
   border-radius: 24px;
+}
+
+@media only screen and (max-width: 600px) {
+  .brand__pic {
+    padding-bottom: 74%;
+  }
 }
 
 .brand__img {
@@ -2686,10 +2665,187 @@ p {
   fill: #ff0046;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #404040;
+  padding: 50px 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer {
+    position: relative;
+  }
+}
+
+.footer__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer__column {
+    margin-bottom: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0 40px 0 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer__list {
+    width: 22%;
+    margin: 0px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .footer__list {
+    width: 48%;
+  }
+}
+
+.footer__item {
+  margin-bottom: 18px;
+}
+
+.footer__link {
+  color: #fff;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-family: 'Roboto-Bold', Arial, sans-serif;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.footer__link:hover {
+  color: #ff0046;
+}
+
+.footer__item {
+  color: #fff;
+}
+
+.footer .layout {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .layout {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-0 {
+    -webkit-box-ordinal-group: -3;
+        -ms-flex-order: -4;
+            order: -4;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-1 {
+    -webkit-box-ordinal-group: -2;
+        -ms-flex-order: -3;
+            order: -3;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-2 {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-3 {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .footer .socio {
+    margin-right: auto;
+  }
+}
+
+.socio {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.socio__item {
+  margin-bottom: 10px;
+}
+
+.socio__item:hover .socio__link {
+  color: #ff0046;
+}
+
+.socio__item:hover svg {
+  fill: #e31d59;
+}
+
+.socio__item svg {
+  fill: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.socio__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.socio__icon {
+  display: inline-block;
+  vertical-align: top;
+  width: 30px;
+}
+
 .hero {
   position: relative;
   overflow: hidden;
   height: 100vh;
+  min-height: 575px;
 }
 
 .hero_low {
@@ -2876,10 +3032,30 @@ p {
   margin: 0;
 }
 
+@media only screen and (max-width: 600px) {
+  .hero__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .hero__nav li {
   display: inline-block;
   vertical-align: top;
   margin: 0 25px 20px;
+}
+
+@media only screen and (max-width: 600px) {
+  .hero__nav li {
+    width: 50%;
+    margin: 0 0 20px;
+  }
 }
 
 .hero__nav li:hover a {
