--- a/markup/components/aside/aside.sass
+++ b/markup/components/aside/aside.sass
@@ -43,12 +43,12 @@
 		margin-bottom: 15px
 		&:hover
 			a
-				font-size: 40px
+				// font-size: 40px
 				color: $red
 				+r(1430)
-					font-size: 3.2vw
+					// font-size: 3.2vw
 				+r(650)
-					font-size: 22px
+					// font-size: 22px
 		&.is-active
 			a
 				font-size: 40px
