--- a/markup/components/brand/brand.sass
+++ b/markup/components/brand/brand.sass
@@ -56,6 +56,8 @@
 		padding-bottom: 100%
 		margin-bottom: 20px
 		border-radius: 24px
+		+r(600)
+			padding-bottom: 74%
 	&__img
 		+vcenter
 		min-width: 100%
