--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -1834,6 +1834,55 @@ p {
   text-align: center;
 }
 
+.article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 60px;
+}
+
+.article__item {
+  width: 24%;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #404040;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 1025px) {
+  .article__item {
+    width: 32%;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .article__item {
+    width: 48%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .article__item {
+    width: 100%;
+  }
+}
+
+.article__footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 20px;
+}
+
 .aside {
   display: inline-block;
   vertical-align: top;
@@ -2017,55 +2066,6 @@ p {
   .has-rside .aside + * {
     width: 100%;
   }
-}
-
-.article {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-bottom: 60px;
-}
-
-.article__item {
-  width: 24%;
-  padding: 20px;
-  margin-bottom: 20px;
-  background-color: #404040;
-  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-@media only screen and (max-width: 1025px) {
-  .article__item {
-    width: 32%;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .article__item {
-    width: 48%;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .article__item {
-    width: 100%;
-  }
-}
-
-.article__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  margin-top: 20px;
 }
 
 .brand {
@@ -2405,6 +2405,185 @@ p {
   line-height: .9;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #404040;
+  padding: 50px 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer {
+    position: relative;
+  }
+}
+
+.footer__column {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer__column {
+    margin-bottom: 30px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.footer__list {
+  list-style: none;
+  padding: 0;
+  margin: 0 40px 0 0;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer__list {
+    width: 22%;
+    margin: 0px;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .footer__list {
+    width: 48%;
+  }
+}
+
+.footer__item {
+  margin-bottom: 18px;
+}
+
+.footer__link {
+  color: #fff;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-family: 'Roboto-Bold', Arial, sans-serif;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.footer__link:hover {
+  color: #ff0046;
+}
+
+.footer__item {
+  color: #fff;
+}
+
+.footer .layout {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .layout {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-0 {
+    -webkit-box-ordinal-group: -3;
+        -ms-flex-order: -4;
+            order: -4;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-1 {
+    -webkit-box-ordinal-group: -2;
+        -ms-flex-order: -3;
+            order: -3;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-2 {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
+}
+
+@media only screen and (max-width: 1025px) {
+  .footer .mod-order-3 {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .footer .socio {
+    margin-right: auto;
+  }
+}
+
+.socio {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.socio__item {
+  margin-bottom: 10px;
+}
+
+.socio__item:hover .socio__link {
+  color: #ff0046;
+}
+
+.socio__item:hover svg {
+  fill: #e31d59;
+}
+
+.socio__item svg {
+  fill: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.socio__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+  font-size: 14px;
+  font-family: Arial, sans-serif;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.socio__icon {
+  display: inline-block;
+  vertical-align: top;
+  width: 30px;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -2665,182 +2844,6 @@ p {
   fill: #ff0046;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #404040;
-  padding: 50px 0;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer {
-    position: relative;
-  }
-}
-
-.footer__column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer__column {
-    margin-bottom: 30px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-.footer__list {
-  list-style: none;
-  padding: 0;
-  margin: 0 40px 0 0;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer__list {
-    width: 22%;
-    margin: 0px;
-  }
-}
-
-@media only screen and (max-width: 650px) {
-  .footer__list {
-    width: 48%;
-  }
-}
-
-.footer__item {
-  margin-bottom: 18px;
-}
-
-.footer__link {
-  color: #fff;
-  font-size: 13px;
-  text-transform: uppercase;
-  font-family: 'Roboto-Bold', Arial, sans-serif;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.footer__link:hover {
-  color: #ff0046;
-}
-
-.footer__item {
-  color: #fff;
-}
-
-.footer .layout {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .layout {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-0 {
-    -webkit-box-ordinal-group: -3;
-        -ms-flex-order: -4;
-            order: -4;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-1 {
-    -webkit-box-ordinal-group: -2;
-        -ms-flex-order: -3;
-            order: -3;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-2 {
-    -webkit-box-ordinal-group: -1;
-        -ms-flex-order: -2;
-            order: -2;
-  }
-}
-
-@media only screen and (max-width: 1025px) {
-  .footer .mod-order-3 {
-    -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .footer .socio {
-    margin-right: auto;
-  }
-}
-
-.socio {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.socio__item {
-  margin-bottom: 10px;
-}
-
-.socio__item:hover .socio__link {
-  color: #ff0046;
-}
-
-.socio__item:hover svg {
-  fill: #e31d59;
-}
-
-.socio__item svg {
-  fill: #fff;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.socio__link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #fff;
-  font-size: 14px;
-  font-family: Arial, sans-serif;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.socio__icon {
-  display: inline-block;
-  vertical-align: top;
-  width: 30px;
-}
-
 .hero {
   position: relative;
   overflow: hidden;
@@ -3078,5 +3081,3 @@ p {
   display: -ms-flexbox;
   display: flex;
 }
-
-/*# sourceMappingURL=main.css.map */
